[package]
name = "lfmc"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive", "env"] }
dirs = "5.0.1"
dotenv = { version = "0.15.0", features = ["clap"] }
fern = "0.6.2"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
